# airflow-providers-tesouro-gerencial

./: .gitignore  MANIFEST.in  README.md  setup.cfg
airflow/providers/tesouro_gerencial/: provider.yaml
airflow/providers/tesouro_gerencial/hooks/: tesouro_gerencial.py
airflow/providers/tesouro_gerencial/transfers/: relatorio_para_arquivo.py  relatorio_para_mongo.py  tesouro_gerencial.py
airflow/providers/tesouro_gerencial/utils/: excel.py
eb/airflow/providers/tesouro_gerencial/hooks/: tesouro_gerencial.py
tesouro_gerencial/: __init__.py  provider.yaml
tesouro_gerencial/hooks/: tesouro_gerencial.py
