[metadata]
name = sed-airflow-providers-tesouro-gerencial
version = attr: tesouro_gerencial.VERSION
description = Provider do Airflow para comunicação com Tesouro Gerencial
long_description = file: README.md
keywords = airflow, tesouro, administracao, governo
license = Exército Brasileiro
license_files = LICENSE.txt
author = Carlos Alberto Duarte Pinto
author_email = carlos.adpinto@gmail.com

[options]
packages = find_namespace:
install_requires =
    apache-airflow


include_package_data = True

[options.entry_points]
apache_airflow_provider = 
    provider_info=tesouro_gerencial.__init__:get_provider_info
