[metadata]
name = airflow-providers-tesouro-gerencial
version = attr: airflow.providers.tesouro_gerencial.VERSION
description = Provider do Airflow para comunicação com Tesouro Gerencial
long_description = file: README.md
keywords = airflow, tesouro, administracao, governo
license_files = LICENSE.txt
author = Carlos Alberto Duarte Pinto
author_email = carlos.adpinto@gmail.com

[options]
packages = find_namespace:
install_requires =
    apache-airflow
    airflow-providers-siafi
    requests
    pandas
    apache-airflow[mongo]
    humanize

include_package_data = True
